--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 <!-- ----------------MOBILE------------ -->
                 <div class="contentHeaderMobile">
-                    <h1>Pet Shop Franco - ¡NUESTRA TIENDA! </h1>
+                    <h1 class ="ms-3">Pet Shop Franco - ¡NUESTRA TIENDA! </h1>
                     <input type="checkbox" id="navbar-toggle">
                     <label for="navbar-toggle">
                         <span id="navbar-close">&times;</span>
