--- a/checkout.html
+++ b/checkout.html
@@ -73,7 +73,7 @@
 
             <main>
                 <div class="containerMain">
-                    <h2>CARRITO DE COMPRA</h2>
+                    <h2 class ="ms-4">CARRITO DE COMPRA</h2>
                     <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                         Realizar la compra
                     </button>
