--- a/contacto.html
+++ b/contacto.html
@@ -43,7 +43,7 @@
               
                               <!-- ----------------MOBILE------------ -->
                               <div class="contentHeaderMobile">
-                                  <h1>Pet Shop Franco - ¡NUESTRA TIENDA! </h1>
+                                  <h1 class ="ms-4">Pet Shop Franco - ¡NUESTRA TIENDA! </h1>
                                   <input type="checkbox" id="navbar-toggle">
                                   <label for="navbar-toggle">
                                       <span id="navbar-close">&times;</span>
