--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <header>
                 <!-- -----------PC------------- -->
                 <div class ="contentHeader">
-                    <img src="../img/Pet_Shop_logo2.png" alt="logo" id="logo">
+                    <img src="./img/Pet_Shop_logo2.png" alt="logo" id="logo">
                     
                     <h1 id="title">¡NUESTRA TIENDA!</h1>
                     <nav>
