--- a/contacto.html
+++ b/contacto.html
@@ -78,7 +78,7 @@
                         <h3 class ="align-items-end" id="titleForm">Si te quedó alguna duda, consultanos y en la brevedad nos comunicaremos</h3>
                     </div>
                     <form class ="mt-4">
-                        <div class="row mb-3">
+                        <div class="row mb-3 p-3">
                           <label for="inputEmail3" class="col-sm-5 col-form-label">Nombre completo:</label>
                           <div class="col-sm-10">
                             <input type="text" class="form-control" id="inputEmail3">
