--- a/contacto.html
+++ b/contacto.html
@@ -74,11 +74,11 @@
             <main>
                 <div class="containerMain">
                   <div class="contacto">
-                    <div class =" w-100  d-flex justify-content-center mt-5">
+                    <div class =" w-100  d-flex justify-content-center mt-5 p-3">
                         <h3 class ="align-items-end" id="titleForm">Si te quedó alguna duda, consultanos y en la brevedad nos comunicaremos</h3>
                     </div>
-                    <form class ="mt-4">
-                        <div class="row mb-3 p-3">
+                    <form class ="mt-4 p-3">
+                        <div class="row mb-3">
                           <label for="inputEmail3" class="col-sm-5 col-form-label">Nombre completo:</label>
                           <div class="col-sm-10">
                             <input type="text" class="form-control" id="inputEmail3">
